--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Individualka</string>
+    <string name="title4">Hi Azim, Welcome to Silencio</string>
+    <string name="text4">Explore the app, Find some peace of mind to prepare for meditation.</string>
+    <string name="title5">What Brings you to Silent Moon?</string>
+    <string name="focuus5">choose a topic to focuse on:</string>
+    <string name="text6">Any time you can choose, but We recommend first thing in the morning.</string>
+    <string name="medy">What time would you like to meditate?</string>
+    <string name="best">Everyday is best, but we recommend picking at least five.</string>
+    <string name="days">Which day would you like to meditate?</string>
+    <string name="gday">We Wish you have a good day</string>
+    <string name="gm">Good morning, Azim</string>
 </resources>
