--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,16 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
     <string name="log_in">LOG IN</string>
+    <string name="email">Email</string>
+    <string name="start">Start</string>
+    <string name="or_log_in_with_email">OR LOG IN WITH EMAIL</string>
+    <string name="create_your_account">Create your account</string>
+    <string name="azim">Azim</string>
+    <string name="home">Home</string>
+    <string name="music">music</string>
+    <string name="sleep">Sleep</string>
+    <string name="meditate">Meditate</string>
+    <string name="azim">Azim</string>
+    <string name="no_thanks">NO THANKS</string>
+    <string name="daily_calm">Daily Calm</string>
 </resources>
