--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Individualka</string>
     <string name="title4">Hi Azim, Welcome to Silencio</string>
     <string name="text4">Explore the app, Find some peace of mind to prepare for meditation.</string>
-    <string name="title5">What Brings you to Silencio?</string>
+    <string name="title5">What Brings you to Silent Moon?</string>
     <string name="focuus5">choose a topic to focuse on:</string>
     <string name="text6">Any time you can choose, but We recommend first thing in the morning.</string>
     <string name="medy">What time would you like to meditate?</string>
@@ -10,39 +10,32 @@
     <string name="days">Which day would you like to meditate?</string>
     <string name="gday">We Wish you have a good day</string>
     <string name="gm">Good morning, Azim</string>
-    <string name="todo">TODO</string>
-    <string name="Ease">Ease the mind into a restful night’s sleep with these deep, amblent tones.</string>
-    <string name="narrating">Pick a Narrator</string>
-    <string name="course">COURSE</string>
-    <string name="male_voice">MALE VOICE</string>
-    <string name="female_voice">FEMALE VOICE</string>
-    <string name="acrobatics">We can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
-    <string name="atencion">Focus Attention</string>
-    <string name="CALMMMMMMMMM">7 DAYS OF CALM</string>
     <string name="silencio">SILENCIO</string>
-    <string name="we_are_what_we_do">We are what we do</string>
-    <string name="thousand">Thousand of people are usign silencio for small meditations</string>
+    <string name="logo">logo</string>
+    <string name="illustration">illustration</string>
+    <string name="title">We are what we do</string>
+    <string name="textone">Thousand of people are usign silencio for small meditations</string>
+    <string name="button">button</string>
     <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
     <string name="log_in">LOG IN</string>
     <string name="todo">TODO</string>
+    <string name="or_log_in_with_email">OR LOG IN WITH EMAIL</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="email">email</string>
     <string name="welcome_back">Welcome Back!</string>
-    <string name="todo">TODO</string>
-    <string name="or_log_in_with_email">OR LOG IN WITH EMAIL</string>
-    <string name="forgot_password">Forgot Password?</string>
-    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
-    <string name="log_in">LOG IN</string>
-    <string name="email">Email</string>
-    <string name="start">Start</string>
-    <string name="or_log_in_with_email">OR LOG IN WITH EMAIL</string>
-    <string name="create_your_account">Create your account</string>
+    <string name="create_your_account">Create your account!</string>
+    <string name="start">start</string>
+    <string name="no_thanks">no thanks</string>
     <string name="azim">Azim</string>
+    <string name="meditate">Meditate</string>
     <string name="home">Home</string>
-    <string name="music">music</string>
-    <string name="sleep">Sleep</string>
-    <string name="meditate">Meditate</string>
-    <string name="azim">Azim</string>
-    <string name="no_thanks">NO THANKS</string>
-    <string name="daily_calm">Daily Calm</string>
+    <string name="ease">Ease the mind into a restful night’s sleep with these deep, amblent tones.</string>
+    <string name="course">COURSE</string>
     <string name="happy_morning">Happy Morning</string>
-    <string name="meditate">Meditate</string>
+    <string name="female_voice">Female Voice</string>
+    <string name="male_voice">Male Voice</string>
+    <string name="narrating">Pick a Narrator</string>
+    <string name="acrobatics">We can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
+    <string name="focus_attention">Focus Attention</string>
+    <string name="calmmmmm">7 DAYS OF CALM</string>
 </resources>
