--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,54 @@
     <string name="acrobatics">We can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
     <string name="focus_attention">Focus Attention</string>
     <string name="calmmmmm">7 DAYS OF CALM</string>
+    <string name="email2">Email</string>
+    <string name="password">Password</string>
+    <string name="_24_34343_favourites">24.34343 Favourites</string>
+    <string name="min">10min</string>
+    <string name="all">All</string>
+    <string name="anxious">Anxious</string>
+    <string name="kids">Kids</string>
+    <string name="signup">Sign Up</string>
+    <string name="continue_with_facebook">Continue with Facebook</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="continue_with_google">Continue with Google</string>
+    <string name="somosing_auca_kg">somosing@auca.kg</string>
+    <string name="close">close</string>
+    <string name="galka">galka</string>
+    <string name="get_started">Get Started</string>
+    <string name="su">SU</string>
+    <string name="m">M</string>
+    <string name="t">T</string>
+    <string name="w">W</string>
+    <string name="th">TH</string>
+    <string name="f">F</string>
+    <string name="s">S</string>
+    <string name="SAVE">SAVE</string>
+    <string name="cabagebuton">cabagebuton</string>
+    <string name="basics">BASICS</string>
+    <string name="fivemin">3–10min</string>
+    <string name="rexla">RELAXATION</string>
+    <string name="music">Music</string>
+    <string name="daily_thoughts">Daily Thoughts</string>
+    <string name="medita">MEDITATION</string>
+    <string name="_3_10min">• 3–10min</string>
+    <string name="rec">Recommended for you</string>
+    <string name="focus">Focus</string>
+    <string name="meditation">Meditation</string>
+    <string name="_5_min">5 min</string>
+    <string name="bdad">Body Scan</string>
+    <string name="calm">Daily Calm</string>
+    <string name="dec_12">DEC 12</string>
+    <string name="my">My</string>
+    <string name="relea">Anxiety Release</string>
+    <string name="play">play</string>
+    <string name="playtime">01:45</string>
+    <string name="playtimend">42:00</string>
+    <string name="_213213_listened">213213 listened</string>
+    <string name="reduce_stress">Reduce Stress</string>
+    <string name="improve_performance">Improve Performance</string>
+    <string name="increse_happiness">Increse HAppiness</string>
+    <string name="ansa">Reduce Anxiety</string>
+    <string name="personal_growth">PErsonal Growth</string>
+    <string name="better_sleep">Better Sleep</string>
 </resources>
